# trading-bot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: research-roadmap.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css
src/trading_bot/: __init__.py
src/trading_bot/analytics/: __init__.py  greeks.py
src/trading_bot/execution/: __init__.py  agent_runtime.py  agent_service.py  agent_store.py  agent_watch.py  paper_broker.py  valuation.py
src/trading_bot/interface/: __init__.py  api.py  app.py  control.py  data.py  launcher.py  results.py
src/trading_bot/interface/web_dist/: index.html
src/trading_bot/interface/web_dist/assets/: index-DzToUZaA.css  index-yHt05qcw.js
src/trading_bot/market_data/: __init__.py  benchmark.py  collector.py  freshness.py  market_state.py  option_chain.py  rates.py  service.py  snapshot_identity.py  status.py  universe.py
src/trading_bot/training/: __init__.py  arena.py  arena_service.py  arena_watch.py  baselines.py  dataset.py  env.py  evaluation.py  features.py  manifest.py  recurrent.py  schemas.py  sequence.py  splits.py  trainer.py  universe_walk_forward.py  walk_forward.py
tests/: __init__.py  test_agent_arena.py  test_agent_runtime.py  test_agent_service.py  test_agent_store.py  test_agent_watch.py  test_arena_service.py  test_arena_watch.py  test_baselines.py  test_benchmark.py  test_collector.py  test_collector_service.py  test_collector_status.py  test_evaluation.py  test_features_sequence.py  test_greeks.py  test_interface_api.py  test_interface_data.py  test_interface_launcher.py  test_interface_results.py  test_manifest.py  test_market_freshness.py  test_market_state.py  test_option_chain.py  test_paper_broker.py  test_recurrent.py  test_snapshot_identity.py  test_splits.py  test_trainer.py  test_training_env.py  test_universe_walk_forward.py  test_walk_forward.py
