[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.6.0"
description = "A starting point for an options trading bot"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "streamlit>=1.40",
    "yfinance>=0.2.54",
]

[project.scripts]
option-chain = "trading_bot.market_data.option_chain:main"
collect-options = "trading_bot.market_data.collector:main"
train-demo = "trading_bot.training.trainer:main"

[project.optional-dependencies]
ml = ["torch>=2.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
