[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.91.0"
description = "A starting point for an options trading bot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pandas>=2.0",
    "numpy>=1.26",
    "uvicorn>=0.34",
    "yfinance>=0.2.54",
]

[project.scripts]
option-chain = "trading_bot.market_data.option_chain:main"
collect-options = "trading_bot.market_data.collector:main"
collector-status = "trading_bot.market_data.status:main"
collector-service = "trading_bot.market_data.service:main"
train-demo = "trading_bot.training.trainer:main"
train-walk-forward = "trading_bot.training.walk_forward:main"
train-universe-walk-forward = "trading_bot.training.universe_walk_forward:main"
agent-arena = "trading_bot.training.arena:main"
arena-watch = "trading_bot.training.arena_watch:main"
arena-service = "trading_bot.training.arena_service:main"
paper-agents = "trading_bot.execution.agent_runtime:main"
paper-agent-watch = "trading_bot.execution.agent_watch:main"
paper-agent-service = "trading_bot.execution.agent_service:main"
trading-desk = "trading_bot.interface.launcher:main"

[project.optional-dependencies]
ml = ["torch>=2.2"]
dev = ["httpx2>=0.1", "pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"trading_bot.interface" = ["web_dist/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
